[tool.poetry]
name = "ajou-wiki-backend"
version = "0.1.0"
description = ""
authors = ["pms <apark0907@ajou.ac.kr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.12.0"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
django-allauth = "^0.54.0"
django = "^4.2.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
